# cpsl-label-studio

./: .gitignore  .gitmodules  .venv  README.md  run_label_studio.sh
calibration/: calibrate.py
hooks/: pre-commit
model-training/: Makefile  README.md  data  pyproject.toml  setup.sh
model-training/analysis/: simple_train.sh  train_rccars_faster_rcnn.sh  visualize_rccars_dataset.sh
model-training/notebooks/: analyze_model_performance.ipynb  test_fov_model.ipynb  test_mmdetection_model.ipynb  test_polylidar.ipynb
model-training/notebooks/.ipynb_checkpoints/: train_mmdetection_model-checkpoint.ipynb
model-training/preparation/fov/: prepare_carla_fov_raw_data.py
model-training/scripts/prepare/detection/: convert_coco_to_oneclass.py  run_convert_coco_to_oneclass.sh  run_split_train_val.sh  split_train_val.py
model-training/scripts/prepare/tracking/: postprocess_tracking_labels.py  run_postprocess_tracking.sh
model-training/scripts/train/: configs  run_train_rccars.sh
model-training/scripts/visualize/: visualize_rccars_dataset.sh
model-training/setup/: setup_mmdetection_paths.sh  setup_mmsegmentation_paths.sh
