[tool.poetry]
name = "model-training"
version = "0.1.0"
description = ""
authors = ["spencer <spencer.hallyburton@duke.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
setuptools = "~69.5.1"
lib-avstack-core = {path="./third_party/lib-avstack-core", extras = ["percep"], develop=true}
# lib-avstack-core = {path="./third_party/lib-avstack-core", develop=true}

[tool.poetry.dev-dependencies]
gdown = "^4.6.4"
ipywidgets = "^8.0"
jupyter = "^1.0.0"

[tool.poetry.group.test.dependencies]
snakeviz="^2.1.1"
pytest = "^7"
pytest-cov = "^4"
bandit = "^1.7"
black = {extras = ["jupyter"], version = "~22.12.0"}
mypy = "^0"
isort = "^5.11"
flake8 = "^5.0"
autoflake = "^1"

[build-system]
requires = [
    "poetry-core",
    "torch"
]
build-backend = "poetry.core.masonry.api"