[project]
name = "model-training"
version = "0.1.0"
description = ""
authors = [{ name = "spencer", email = "spencer.hallyburton@duke.edu" }]
requires-python = ">=3.10,<3.11"
readme = "README.md"
dependencies = [
    "setuptools~=69.5.1",
    "polylidar>=1.0.9,<2",
    "avstack-core[percep]",
    "avstack-api",
]

[dependency-groups]
dev = [
    "gdown>=4.6.4,<5",
    "ipywidgets~=8.0",
    "jupyter>=1.0.0,<2",
]
test = [
    "snakeviz>=2.1.1,<3",
    "pytest>=7,<8",
    "pytest-cov>=4,<5",
    "bandit~=1.7",
    "black[jupyter]~=22.12.0",
    "mypy>=0,<1",
    "isort~=5.11",
    "flake8~=5.0",
    "autoflake>=1,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.uv.sources]
avstack-core = { path = "./third_party/avstack-core", editable = true }
avstack-api = { path = "./third_party/avstack-api", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
